--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "typescript": "4.9.4"
   },
   "devDependencies": {
+    "@types/classnames": "^2.3.1",
     "stylelint": "^14.16.1",
     "stylelint-config-standard": "^29.0.0",
     "stylelint-order": "^6.0.1",
